# qss4

./: .gitignore  Dockerfile  README.md  TechnicalAnalysis.md  app.py  docker-compose.override.yml  docker-compose.yml  models.py  pyproject.toml  stress_token.json  system.md
api/v1/: auth.py  files.py  health.py  users.py
client/: qss4_client.py
core/: acl.py  config.py  rate_limiter.py  redis_client.py  security.py
instance/: qss4.db
keys/: kyber_metadata.json  kyber_private.key  kyber_public.key
mineral/blockchain/: base.py  polygon_logger.py
mineral/compression/: base.py  zstd_compressor.py
mineral/encryption/: base.py  hybrid_encryptor.py  key_manager.py
mineral/files/: base_file.py
mineral/storage/: base.py  local_fs.py
scripts/: generate_keys.py  init_db.py  init_test_db.sql
services/: download_token.py  file_service.py  sandbox.py
templates/: base.html  files.html  index.html  login.html  register.html  upload.html
test/: Dockerfile.benchmark  docker-compose.test.yml  requirements.txt  setup_test_user.py  test_api_benchmarks.py  test_end_to_end_stress.py  test_end_to_end_stress_parallel.py
utils/: performance_logger.py
